# crewai_marketing_crew

./: .env.example  README.md  pyproject.toml  seo_audit_report.md
src/marketing_crew/: crew.py  main.py
src/marketing_crew/config/: agents.yaml  tasks.yaml
