[project]
name = "marketing_crew"
version = "0.1.0"
description = "marketing_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
marketing_crew = "marketing_crew.main:run"
run_crew = "marketing_crew.main:run"
train = "marketing_crew.main:train"
replay = "marketing_crew.main:replay"
test = "marketing_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
